# house

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
api/: BUILD.bazel  README.md  bridge.proto  house.proto  sensor.proto
api/command/: BUILD.bazel  audio_output.proto  brightness.proto  command.proto  input.proto  onoff.proto  time.proto  volume.proto
api/device/: BUILD.bazel  av_receiver.proto  camera.proto  clock.proto  connected_device.proto  device.proto  ev_charger.proto  generic.proto  light.proto  media_player.proto  sensor.proto  television.proto  thermostat.proto  ups.proto
api/trait/: BUILD.bazel  README.md  air_properties.proto  air_quality.proto  app.proto  audio_output.proto  battery.proto  brightness.proto  charging_session.proto  colour.proto  input.proto  light_level.proto  media.proto  media_stream.proto  network_presence.proto  onoff.proto  power.proto  presence.proto  speed.proto  thermostat.proto  time.proto  volume.proto
bridges/: README.md
bridges/airthings/: BUILD.bazel  bridge.go  main.go
bridges/apc-ups/: BUILD.bazel  bridge.go  main.go
bridges/example/: BUILD.bazel  README.md  bridge.go  main.go
bridges/frigate/: BUILD.bazel  bridge.go  camera.go  frigate.example.yaml  main.go
bridges/frigate/frigate/: BUILD.bazel  client.go
bridges/monop-amp/: BUILD.bazel  README.md  bridge.go  main.go  monoprice-amp.example.yaml
bridges/omada/: BUILD.bazel  bridge.go  config.yaml  main.go
bridges/plex/: BUILD.bazel  bridge.go  main.go  plex.go
bridges/raspi-clock/: BUILD.bazel  bridge.go  clock.go  main.go
bridges/roku/: BUILD.bazel  README.md  bridge.go  main.go
bridges/tesla-charger/: BUILD.bazel  README.md  bridge.go  charger.go  charger_test.go  main.go
clients/bridgecli/: BUILD.bazel  main.go
clients/bridgecli/cmd/: BUILD.bazel  root.go
clients/bridgecli/cmd/bridge/: BUILD.bazel  bridge.go  get.go  listDevices.go  monitor.go
clients/bridgecli/cmd/device/: BUILD.bazel  brightness.go  device.go  onoff.go  time.go
service/bridge/: BUILD.bazel  README.md  api.go  error.go  server.go  service.go  sink.go  source.go  source_test.go
service/house/: BUILD.bazel  service.go
service/house/cmd/housecli/: BUILD.bazel  main.go
service/house/cmd/housed/: BUILD.bazel  main.go
service/house/db/: BUILD.bazel  building.go  database.go  device.go  room.go
service/house/db/migrations/: 000002_add_device_mapping.down.sql  000002_add_device_mapping.up.sql  20231010143848_setup.down.sql  20231010143848_setup.up.sql
tools/: gopackagesdriver.sh
