"""
This project contains an API and a series of microservices for managing an IoT-enabled house.
"""
module(
    name = "house",
    version = "1.0.0",
)

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.40.0")
bazel_dep(name = "rules_proto", version = "7.0.2")
# The protobuf module is included so that the well known types can be resolved
# Once the rules_proto migration to protobuf is complete the above module can be removed.
bazel_dep(name = "protobuf", version = "29.1")
bazel_dep(name = "grpc", version = "1.68.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.9")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_davecgh_go_spew",
    "com_github_golang_migrate_migrate_v4",
    "com_github_google_uuid",
    "com_github_mattn_go_sqlite3",
    "com_github_rafalop_sevensegment",
    "com_github_spf13_cobra",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_uber_go_zap",
)
