load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "api_proto",
    srcs = [
        "bridge.proto",
        "house.proto",
        "sensor.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//api/command:command_proto",
        "//api/device:device_proto",
    ],
)

go_proto_library(
    name = "api_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/rmrobinson/house/api",
    proto = ":api_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//api/command",
        "//api/device",
    ],
)

go_library(
    name = "api",
    embed = [":api_go_proto"],
    importpath = "github.com/rmrobinson/house/api",
    visibility = ["//visibility:public"],
)
