load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

#gazelle:exclude empty.go

proto_library(
    name = "api_proto",
    srcs = [
        "bridge.proto",
        "house.proto",
        "sensor.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//api/command:command_proto",
        "//api/device:device_proto",
        "@protobuf//:empty_proto",
    ],
)

go_proto_library(
    name = "api_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/rmrobinson/house/api",
    proto = ":api_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//api/command:command_go_proto",
        "//api/device:device_go_proto",
    ],
)
