load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "command_proto",
    srcs = [
        "brightness.proto",
        "command.proto",
        "onoff.proto",
        "time.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["//api/trait:trait_proto"],
)

go_proto_library(
    name = "command_go_proto",
    importpath = "github.com/rmrobinson/house/api/command",
    proto = ":command_proto",
    visibility = ["//visibility:public"],
    deps = ["//api/trait"],
)

go_library(
    name = "command",
    embed = [":command_go_proto"],
    importpath = "github.com/rmrobinson/house/api/command",
    visibility = ["//visibility:public"],
)
