load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

#gazelle:exclude empty.go

proto_library(
    name = "command_proto",
    srcs = [
        "brightness.proto",
        "command.proto",
        "onoff.proto",
        "time.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["//api/trait:trait_proto"],
)

go_proto_library(
    name = "command_go_proto",
    importpath = "github.com/rmrobinson/house/api/command",
    proto = ":command_proto",
    visibility = ["//visibility:public"],
    deps = ["//api/trait:trait_go_proto"],
)
