load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "device_proto",
    srcs = [
        "av_receiver.proto",
        "clock.proto",
        "device.proto",
        "generic.proto",
        "light.proto",
        "sensor.proto",
        "thermostat.proto",
        "ups.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//api/trait:trait_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "device_go_proto",
    importpath = "github.com/rmrobinson/house/api/device",
    proto = ":device_proto",
    visibility = ["//visibility:public"],
    deps = ["//api/trait"],
)

go_library(
    name = "device",
    embed = [":device_go_proto"],
    importpath = "github.com/rmrobinson/house/api/device",
    visibility = ["//visibility:public"],
)
