load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

#gazelle:exclude empty.go

proto_library(
    name = "device_proto",
    srcs = [
        "av_receiver.proto",
        "clock.proto",
        "device.proto",
        "ev_charger.proto",
        "generic.proto",
        "light.proto",
        "media_player.proto",
        "sensor.proto",
        "television.proto",
        "thermostat.proto",
        "ups.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//api/trait:trait_proto",
        "@protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "device_go_proto",
    importpath = "github.com/rmrobinson/house/api/device",
    proto = ":device_proto",
    visibility = ["//visibility:public"],
    deps = ["//api/trait:trait_go_proto"],
)
