load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "plex_lib",
    srcs = [
        "bridge.go",
        "main.go",
        "plex.go",
    ],
    importpath = "github.com/rmrobinson/house/bridges/plex",
    visibility = ["//visibility:private"],
    deps = [
        "//api:api_go_proto",
        "//api/command:command_go_proto",
        "//api/device:device_go_proto",
        "//api/trait:trait_go_proto",
        "//service/bridge",
        "@com_github_google_uuid//:uuid",
        "@com_github_hekmon_plexwebhooks//:plexwebhooks",
        "@com_github_lukehagar_plexgo//:plexgo",
        "@com_github_lukehagar_plexgo//models/operations",
        "@com_github_spf13_viper//:viper",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "plex",
    embed = [":plex_lib"],
    visibility = ["//visibility:public"],
)
