load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "raspi-clock_lib",
    srcs = [
        "bridge.go",
        "clock.go",
        "main.go",
    ],
    importpath = "github.com/rmrobinson/house/bridges/raspi-clock",
    visibility = ["//visibility:private"],
    deps = [
        "//api:api_go_proto",
        "//api/command:command_go_proto",
        "//api/device:device_go_proto",
        "//api/trait:trait_go_proto",
        "//service/bridge",
        "@com_github_rafalop_sevensegment//:sevensegment",
        "@org_golang_google_grpc//:grpc",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "raspi-clock",
    embed = [":raspi-clock_lib"],
    visibility = ["//visibility:public"],
)
