load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "bridge",
    srcs = [
        "api.go",
        "error.go",
        "service.go",
    ],
    importpath = "github.com/rmrobinson/house/service/bridge",
    visibility = ["//visibility:public"],
    deps = [
        "//api:api_go_proto",
        "//api/command:command_go_proto",
        "//api/device:device_go_proto",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_uber_go_zap//:zap",
    ],
)
