load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "house",
    srcs = [
        "building.go",
        "service.go",
    ],
    importpath = "github.com/rmrobinson/house/service/house",
    visibility = ["//visibility:public"],
    deps = [
        "//api:api_go_proto",
        "//api/device:device_go_proto",
        "//service/house/db",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_uber_go_zap//:zap",
    ],
)
