load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = ["root.go"],
    importpath = "github.com/rmrobinson/house/clients/bridgecli/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//api:api_go_proto",
        "//clients/bridgecli/cmd/bridge",
        "//clients/bridgecli/cmd/device",
        "@com_github_spf13_cobra//:cobra",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)
