load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = [
        "building.go",
        "database.go",
        "room.go",
    ],
    embedsrcs = [
        "migrations/20231010143848_setup.down.sql",
        "migrations/20231010143848_setup.up.sql",
    ],
    importpath = "github.com/rmrobinson/house/service/house/db",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_migrate_migrate_v4//:migrate",
        "@com_github_golang_migrate_migrate_v4//database/sqlite3",
        "@com_github_golang_migrate_migrate_v4//source/iofs",
        "@com_github_google_uuid//:uuid",
        "@org_uber_go_zap//:zap",
    ],
)
