load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = [
        "building.go",
        "database.go",
        "device.go",
        "room.go",
    ],
    embedsrcs = [
        "migrations/000001_setup.down.sql",
        "migrations/000001_setup.up.sql",
        "migrations/000002_add_device_mapping.down.sql",
        "migrations/000002_add_device_mapping.up.sql",
    ],
    importpath = "github.com/rmrobinson/house/service/house/db",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_migrate_migrate_v4//:migrate",
        "@com_github_golang_migrate_migrate_v4//database/sqlite3",
        "@com_github_golang_migrate_migrate_v4//source/iofs",
        "@com_github_google_uuid//:uuid",
        "@org_uber_go_zap//:zap",
    ],
)
