load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bridge",
    srcs = [
        "bridge.go",
        "get.go",
    ],
    importpath = "github.com/rmrobinson/house/clients/bridgecli/cmd/bridge",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "@com_github_davecgh_go_spew//spew",
        "@com_github_spf13_cobra//:cobra",
    ],
)
