load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "housecli_lib",
    srcs = ["main.go"],
    importpath = "github.com/rmrobinson/house/service/house/cmd/housecli",
    visibility = ["//visibility:private"],
    deps = [
        "//service/house/db",
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "housecli",
    embed = [":housecli_lib"],
    visibility = ["//visibility:public"],
)
