load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "housed_lib",
    srcs = ["main.go"],
    importpath = "github.com/rmrobinson/house/service/house/cmd/housed",
    visibility = ["//visibility:private"],
    deps = [
        "@org_golang_google_grpc//:go_default_library",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "housed",
    embed = [":housed_lib"],
    visibility = ["//visibility:public"],
)
